# podcast-rag-server

./: .dockerignore  .gitignore  Dockerfile  README.md  TRUE_ANON_3WAY_RECONCILIATION.md  book_recommendations_raw.json  docker-compose.yml  podocasts.opml  pyproject.toml  requirements-dev.txt  requirements-rag.txt
.claude/: settings.local.json
data/: download_state.json  guest_directory_complete.json  podcast_book_analysis.json
docs/: AUDIO_TOOLS.md  LOCK_FILE_SAFETY.md  MISSING_EPISODES.md  MONITOR_GUIDE.md  PATREON_AUTH.md  RAG_GUIDE.md  README.md  podcast_priority_list.md
podcast_metadata/: 5CAST w Andrew Callaghan.json  A Podcast Of Unnecessary Detail.json  Arseblog Arsecast, The Arsenal Podcast.json  Bad Bets.json  Block Stars with David Schwartz.json  Blowback.json  Burn Wild.json  Chapo Trap House.json  Couples Therapy with Candice and Casey.json  Cox n' Crendor Show.json  Cyber Hack.json  Fear&.json  Fin vs History.json  Grounded with Louis Theroux.json  Hello Internet.json  I Like Films with Jonathan Ross.json  Jimquisition.json  Joshua Citarella.json  Multipolarity.json  My Friend Podcast with Paige Elkington with Ruby Caster.json  Odd Lots.json  RHLSTP with Richard Herring.json  Sad Boyz.json  Say Why To Drugs.json  Stephen Fry's 7 Deadly Sins.json  THE ADAM BUXTON PODCAST.json  TRUE ANON TRUTH FEED.json  Talking Politics HISTORY OF IDEAS.json  The Adam Friedland Show Podcast.json  The Always Sunny Podcast.json  The Loud And Quiet Podcast.json  The Louis Theroux Podcast.json  The Missing Cryptoqueen.json  The Yard.json  Things Fell Apart.json  Witch.json  (+1 more)
(+121 files in other folders)
